
    * New Features / Changes
        - Schema/resultsource instances are now crossreferenced via a new
          system guaranteeing leak-free mutually assuered destruction
        - Switch to a warning when find() is invoked with both a 'key'
          argument and a NULL-containing condition to satisfy the named
          constraint. Previously (starting with 0.08124) an exception was
          thrown.

    * Fixes
        - Revert default selection to being lazy again (eagerness introduced
          in 0.08125) - fixes DBIx::Class::Helper::ResultSet::RemoveColumns
        - Fix losing order of columns provided in select/as (regression from
          0.08125)
        - Unaliased "dark" selectors no longer throw off prefetch
        - Fix proper composition of bind values across all possible
          SQL areas ( group_by => \[ ... ] now works properly )
        - Allow populate to skip empty has_many relationships which makes
          it easier to pass HashRefInflator data directly to ->populate
        - Improve freeze/thaw semantics and error messages (RT#62546)
        - Fix inconsistency in Manual::Features (RT#64500)
        - Fix incorrect SQL when using for => 'shared' with MySQL (RT#64590)

    * Misc
        - Fix test warning on win32 - at this point the test suite is
          warning-free on all known OSes

0.08126 2010-12-28 18:10 (UTC)
    * Fixes
        - Bump forgotten Class::Accessor::Grouped core dependency
        - Promote forgotten Hash::Merge optdep to a hard requirement
        - Skip t/storage/error.t on smokers with leaking perls
        - Fix t/storage/txn.t deadlocks on slower machines
        - Do not run on smokers if a trial Package::Stash is found

0.08125 2010-12-27 04:30 (UTC)
    * New Features / Changes
        - New method ResultSource columns_info method, returning multiple
          pairs of column name/info at once
        - $rs->search now throws when called in void context, as it makes